# school_pico

./: README.md
lab-1/: .ccls  .gdbinita  README.md  commands.txt
lab-1/.cache/clangd/index/: main.c.4E21E777959E13F2.idx  utils.c.7823471E23561689.idx  utils.h.500F135779C935B1.idx
lab-1/include/: utils.h
lab-1/src/: main.c  utils.c
lab-2/: .ccls  CMakeLists.txt
lab-2/include/: utils.h
lab-2/src/: main.c  utils.c
lab-3/.cache/clangd/index/: main.c.D277E5A7EEA09CFB.idx
lab-3/src/: main.c
lab-4/: CMakeLists.txt  README.md
lab-4/.cache/clangd/index/: LoRa.c.1A37D85C60A4337B.idx  LoRa.c.E11BEE88B7584329.idx  LoRa.h.3D2612853CA9EC4A.idx  LoRa.h.E7B663AD767DA0DC.idx  hardware_definitions.h.26BA629365C84CCC.idx  hardware_definitions.h.8135D110C8013B9B.idx  main.c.12AB393ECC1D5B1B.idx  main.c.896BB92C5F99A836.idx  utils.c.02567511511F4F24.idx  utils.c.1E6BDEFD91CF43B6.idx  utils.h.317CA4E8ECF62B63.idx  utils.h.359E26C145271B9C.idx
lab-4/include/: LoRa.h  hardware_definitions.h  utils.h
lab-4/src/: LoRa.c  main.c  utils.c
lab-5/: CMakeLists.txt
lab-5/.cache/clangd/index/: eeprom.c.4086A36E6E8952D7.idx  eeprom.h.C43B2F228CE42A7A.idx  hardware_definitions.h.887856D8BE701B44.idx  loging.c.23A765634C996F79.idx  loging.h.A219459035DAEAE4.idx  main.c.D9E0940EC0DE1DC7.idx  utils.c.E20A8F1278C4727E.idx  utils.h.AAE023009A39D8F7.idx
lab-5/include/: eeprom.h  hardware_definitions.h  loging.h  utils.h
lab-5/src/: eeprom.c  loging.c  main.c  utils.c
pico-template/: .clangd  CMakeLists.txt  Makefile  commands.txt
pico-template/src/: main.c
